cabal-version:       2.2

name:                Quoptimize
version:             0.1.0.0
synopsis:            Tools and utilities for mathematical optimization on a universal quantum computer.
-- description:
license:             MIT
license-file:        LICENSE
author:              Fahimeh Bayeh, Scott Wesley
maintainer:          scott.wesley@dal.ca
-- copyright:
category:            Quantum
build-type:          Simple
extra-source-files:  README.md

-----------------------------------------------------------------------------------------
-- Main library.

library
  exposed-modules:     Quoptimize.CNF.Format
                       Quoptimize.CNF.Language
                       Quoptimize.CNF.Parser
                       Quoptimize.Hamiltonian.Format
  other-modules:       Quoptimize.CNF.Lexer
  build-tool-depends:  happy:happy,
                       alex:alex
  build-depends:       base,
                       array,
                       containers,
                       filepath
  hs-source-dirs:      src/Quoptimize
  default-language:    Haskell2010

-----------------------------------------------------------------------------------------
-- Executables.

library QuoptimizeExe
  exposed-modules:     QuoptimizeExe.CmdLnFlags
                       QuoptimizeExe.CmdLnParser
  build-depends:       base,
                       cmdargs,
                       directory
  hs-source-dirs:      src/QuoptimizeExe
  default-language:    Haskell2010

common basic-exe-props
  hs-source-dirs:      exe
  default-language:    Haskell2010
  build-depends:       base,
                       Quoptimize,
                       QuoptimizeExe

executable qaoa_builder
  import:              basic-exe-props
  main-is:             QAOABuilder/Main.hs
  other-modules:       QAOABuilder.CmdLn

-----------------------------------------------------------------------------------------
-- Unit Testing.

common basic-unit-test-props
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       Quoptimize

test-suite quoptimize-cnf-format-tests
  import:              basic-unit-test-props
  main-is:             Quoptimize-CNF-Format-Tests.hs
  type:                exitcode-stdio-1.0

test-suite quoptimize-cnf-language-tests
  import:              basic-unit-test-props
  main-is:             Quoptimize-CNF-Language-Tests.hs
  type:                exitcode-stdio-1.0

test-suite quoptimize-cnf-parser-tests
  import:              basic-unit-test-props
  main-is:             Quoptimize-CNF-Parser-Tests.hs
  type:                exitcode-stdio-1.0

test-suite quoptimize-hamiltonian-format-tests
  import:              basic-unit-test-props
  main-is:             Quoptimize-Hamiltonian-Format-Tests.hs
  type:                exitcode-stdio-1.0
